bug fixed for account select

--- a/extension/main.html
+++ b/extension/main.html
@@ -66,6 +66,7 @@
                 </svg>
             </button>
         </div>
+        <button id="exit_dashboard_btn">quit</button>
         <button class="plugin-setting"><img src="file/setting.png" alt="setting"></button>
     </header>
     <div class="tab-container">
